Add JVM deep docs: GC/OOM/class loading/memory/JIT/JDK version survey
Rewrite 3 shallow docs (jvm-garbage-collection, jvm-oom-analysis,
g1-gc-changes) with source-level depth: complete GC roots, all 7 OOM
types, G1 RSet/SATB/Mixed GC phases and per-JDK G1 evolution.

Add 4 new docs:
- jvm-memory-structure: runtime data areas, JDK8 PermGen->Metaspace
- jvm-class-loading: 5 phases, parent delegation, breaking it (JDBC/Tomcat/OSGi)
- jvm-object-layout-jit: MarkWord, pointer compression, C1/C2/Graal,
  escape analysis, JDK24/25 Compact Object Headers (JEP 450/519)
- jdk-version-optimization-survey: JDK 8->25 JVM/GC/perf evolution,
  verified via OpenJDK JEPs (Generational ZGC default JEP 474,
  Compact Headers JEP 519, Generational Shenandoah JEP 521)

Co-authored-by: Cursor <cursoragent@cursor.com>